--- a/docs/releasenotes/1.0.14-build-notes.md
+++ b/docs/releasenotes/1.0.14-build-notes.md
@@ -1,4 +1,3 @@
-
 # Galileo Glass UI - Build Notes Version 1.0.14
 
 ## Build Environment
@@ -184,36 +183,36 @@ The v1.0.14 build process was extensive, involving significant physics engine en
 ## Known Issues/Warnings
 
 1. **Physics Hooks Testing:**
-   - Some unit tests for physics hooks show inconsistent results due to `fireEvent` limitations. Plan to replace these with more robust testing approach in next release.
+   - Some unit tests for physics hooks show inconsistent results due to `fireEvent` limitations. **Status: Likely Addressed/Mitigated.** Tests refactored to be less timing-dependent.
 
 2. **Performance with Large Datasets:**
-   - `GlassDataGrid` shows performance degradation with 1000+ rows when physics animations are enabled. Recommend virtual rendering for large datasets.
+   - `GlassDataGrid` shows performance degradation with 1000+ rows when physics animations are enabled. Recommend virtual rendering for large datasets. **Status: Open.** Needs future optimization (virtualization).
 
 3. **Z-Space App Layout:**
-   - Glass effects integration is currently limited due to mixin integration issues. Planned for resolution in upcoming patch.
+   - Glass effects integration is currently limited due to mixin integration issues. **Status: Resolved.** Mixin integration confirmed in code.
 
 4. **Pie Chart Rendering:**
-   - Edge case with very small pie segments (<1%) can cause rendering artifacts in certain browsers.
+   - Edge case with very small pie segments (<1%) can cause rendering artifacts in certain browsers. **Status: Unclear/Possibly Still Present.** Requires verification/testing.
 
 5. **Build Warnings:**
-   - Several "Missing exports" warnings from `@types/react` dependency - these do not affect functionality but will be addressed in future versions.
+   - Several "Missing exports" warnings from `@types/react` dependency - these do not affect functionality but will be addressed in future versions. **Status: Resolved.** Build logs are clean.
 
 ## Next Steps
 
 1. **Testing Enhancement:**
-   - Implement comprehensive test suite for physics hooks
-   - Add integration tests for component compositions
-   - Create visual regression tests for animation effects
+   - Implement comprehensive test suite for physics hooks **(Partially addressed by test refactoring)**
+   - Add integration tests for component compositions **(Ongoing/Future Task)**
+   - Create visual regression tests for animation effects **(Future Task)**
 
 2. **Documentation Completion:**
-   - Complete component documentation for new additions
-   - Enhance physics engine troubleshooting guide
-   - Add migration guidance for users on older versions
+   - Complete component documentation for new additions **(DONE)**
+   - Enhance physics engine troubleshooting guide **(DONE)**
+   - Add migration guidance for users on older versions **(DONE)**
 
 3. **Performance Optimization:**
-   - Further optimize physics calculations for mobile devices
-   - Implement virtualization for `GlassDataGrid` with large datasets
-   - Add bundle optimization for tree-shakeable exports
+   - Further optimize physics calculations for mobile devices **(Future Task)**
+   - Implement virtualization for `GlassDataGrid` with large datasets **(Future Task)**
+   - Add bundle optimization for tree-shakeable exports **(Future Task)**
 
 ---
 
