chore: complete v1.0.18 release with all TypeScript fixes, documentation updates, and example conversions

--- a/docs/releasenotes/1.0.8-build-notes.md
+++ b/docs/releasenotes/1.0.8-build-notes.md
@@ -34,7 +34,7 @@ Supporting documentation and examples were created for the new API.
 
 ### Documentation
 *   Created API documentation `docs/physics/engine-api.md` detailing the hook, types, methods, and usage notes.
-*   Created an example implementation `docs/examples/animations/CustomPhysicsDemo.tsx` demonstrating hook usage, body creation, state synchronization for rendering, and collision event handling.
+*   Created an example implementation `examples/animations/CustomPhysicsDemo.stories.tsx` demonstrating hook usage, body creation, state synchronization for rendering, and collision event handling.
 *   Updated core project documentation (`README.md`, etc.) to include information and links regarding the new physics engine API.
 *   Finalized `CHANGELOG-1.0.8.md` reflecting delivered features and known pending items.
 
