chore: finalize and release v1.0.27

--- a/docs/releasenotes/1.0.21-build-notes.md
+++ b/docs/releasenotes/1.0.21-build-notes.md
@@ -63,8 +63,7 @@ The v1.0.21 build introduces several substantial new features to the Galileo Gla
    * Updated core components to implement alternative visual representations when `prefersReducedMotion` is true.
 
 2. **Adaptive Performance Controls:**
-   * Implemented `useDeviceCapabilities` hook to detect CPU and memory resources.
-   * Created `useQualityTier` hook to map capabilities to performance tiers.
+   * Implemented `useAdaptiveQuality` hook for device capability detection and quality tier determination.
    * Updated `AnimationContext` to provide configuration options for quality tiers.
    * Modified computationally intensive components (especially `useParticleSystem`) to adjust behavior based on detected or forced quality tier.
 
@@ -102,8 +101,7 @@ The v1.0.21 build introduces several substantial new features to the Galileo Gla
 - `src/hooks/use3DTransform.ts` (New)
 - `src/hooks/useParallaxScroll.ts` (New)
 - `src/hooks/useEnhancedReducedMotion.ts` (New/Updated)
-- `src/hooks/useDeviceCapabilities.ts` (New)
-- `src/hooks/useQualityTier.ts` (New)
+- `src/hooks/useAdaptiveQuality.ts` (New)
 
 ### Animation & Physics Engines
 - `src/animations/particles/particleEngine.ts` (New)
@@ -179,7 +177,7 @@ The v1.0.21 build introduces several substantial new features to the Galileo Gla
   * Test with screen readers to ensure new components are properly accessible.
 - **Test Performance Controls:**
   * Validate that quality tiers correctly adjust feature behavior.
-  * Test automatic capability detection with `useDeviceCapabilities`.
+  * Test automatic capability detection with `useAdaptiveQuality`.
   * Verify forced quality tier override works as expected.
 - **Test GlassFocusRing Component:**
   * Verify appearance and animation with different focusable elements.
