--- a/docs/releasenotes/1.0.5-build-notes.md
+++ b/docs/releasenotes/1.0.5-build-notes.md
@@ -23,8 +23,7 @@ The foundation of the enhanced animation system was built with a robust physics 
 *   Created collision event callbacks providing detailed data for custom interaction handlers.
 
 ### Adaptive Performance System
-*   Created `useDeviceCapabilities.ts` for detecting hardware characteristics (GPU, CPU, memory, display).
-*   Implemented `useQualityTier.ts` to automatically scale animation fidelity based on device capabilities, ensuring consistent performance.
+*   Created `useAdaptiveQuality` hook for detecting hardware characteristics and automatically scaling animation fidelity based on device capabilities.
 *   Added `physicsSettings.ts` with preset configurations tuned for different quality tiers.
 *   Implemented dynamic resolution scaling for physics simulations, adjusting precision based on performance headroom.
 *   Added performance monitoring with automatic quality adjustment to prevent animation jank.
